--- a/tester/package.json
+++ b/tester/package.json
@@ -9,6 +9,7 @@
   "author": "David Ellis <david@alantechnologies.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1"
   }
 }
