--- a/loader/package.json
+++ b/loader/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "David Ellis <david@alantechnologies.com>",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "dependencies": {
     "cross-fetch": "^3.1.4",
     "express": "^4.17.1"
