--- a/tester/package.json
+++ b/tester/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "David Ellis <david@alantechnologies.com>",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
